--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Nicole Rosenberg - Super UI Designer</title>
+    <title>Nicole Rosenberg - Super Duper UI Designer</title>
     <link href="img/favicon.ico" rel="shortcut icon">
     </head>
   <body>
