--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About - Nicole Rosenberg</title>
+    <title>About - UI Designer Nicole Rosenberg</title>
     <link href="img/favicon.ico" rel="shortcut icon">
   </head>
   <body>
