Linked to home screen
Linked the logo to take users back to home screen

--- a/about.html
+++ b/about.html
@@ -8,11 +8,13 @@
   <body>
     <header>
       <div>
-        <img
+        <a href="index.html">
+          <img
         src="img/logo_temp.svg" alt="Nicole Rosenberg Logo">
+      </a>
         <nav>
           <ul><!-- not bulleted because inside nav tag-->
-            <li><a href="index.html">Work</a></li>
+            <li><a href="beyondcomfort.html">Work</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
