Linked to new project
Added link to Beyond Comfort

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <header>
       <div>
-        <img
+          <img
         src="img/logo_temp.svg" alt="Nicole Rosenberg Logo">
         <nav>
           <ul><!-- not bulleted because inside nav tag-->
-            <li><a href="index.html">Work</a></li>
+            <li><a href="beyondcomfort.html">Work</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -46,8 +46,10 @@
           <div><!-- green: Project 1 -->
             <div><!-- seafoam: image -->
               <picture>
-                <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
+              <a href="beyondcomfort.html">
+                  <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
                   <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover">
+                </a>
               </picture>
             </div><!-- close seafoam: image -->
 
