--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About - UI Designer Nicole Rosenberg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About - Nicole Rosenberg</title>
     <link href="img/favicon.ico" rel="shortcut icon">
+    <link rel="stylesheet" type="text/css"
     href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700"
