Fixed ID styling code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body id="home">
     <header>
-      <div id="logo"><!--Tried adding  fill="#39a78e" to img but didn't work-->
+      <div id="logo">
           <img
         src="img/logo_temp.svg" alt="Nicole Rosenberg Logo" height="100">
         <nav>
@@ -51,8 +51,8 @@
 
           <div><!-- green: Project 1 -->
             <div><!-- seafoam: image -->
-              <picture>
-              <a href="beyondcomfort.html"><!--validator says this is not allowed as a child element, but how to add link?-->
+              <a href="beyondcomfort.html">
+                <picture>
                   <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
                   <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover">
                 </a>
@@ -75,7 +75,8 @@
 
           <div><!-- green: Project 2 -->
             <div><!-- seafoam: image -->
-              <picture><!--didn't include link here since need to understand issue above-->
+                    <a href="davisproperties.html">
+                      <picture><!--didn't include link here since need to understand issue above-->
                 <source srcset="img/davis_properties/davisprop_cover_600px@2x.jpg" media="(max-width:767px)">
                   <img src="img/davis_properties/davisprop_cover_1200px@2x.jpg" alt="My Image">
               </picture>
