--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700"
     rel="stylesheet">
   </head>
-  <body id="home">
+
+  <body id="home"><!--id the page-->
+
     <header>
-      <div id="logo">
-          <img
-        src="img/logo_temp.svg" alt="Nicole Rosenberg Logo" height="100">
+      <div class="container"><!--contain the header-->
+          <img class="logo"
+        src="img/logo_temp.svg" alt="Nicole Rosenberg Logo">
         <nav>
           <ul><!-- not bulleted because inside nav tag-->
             <li><a href="beyondcomfort.html">Work</a></li>
@@ -23,102 +25,96 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
-      </div>
+      </div><!--close the header container-->
     </header>
 
     <main>
-      <div><!-- orange: hero block -->
-        <div><!-- yellow -->
-          <div id="hello"><!-- grey -->
+      <div><!--main-->
+        <div id="hero"><!-- id the intro language -->
+          <div class="container"><!--apply a class to the intro-->
             <h1>Hi, my name is Nicole Rosenberg</h1>
-            <span><!-- brown -->
-              Based in Boston, Massachusetts, I am a versatile UI/UX designer.
-            </span><!-- close brown -->
-          </div><!-- close grey -->
+            <h2>  I am a versatile UI/UX designer based in Boston, Massachusetts.</h2>
+            <p><!-- description -->
+              In addition to completing a 7-month UI Immersion certificate program,
+              I have ten years of experience in market research and possess strong
+              skills in writing and qualitative & quantitative data analysis.
+            </p><!-- close description -->
+          </div><!--close container-->
+        </div><!-- close hero id -->
 
-          <p><!-- blue -->
-          In addition to completing a 7-month UI Immersion certificate program,
-          I have ten years of experience in market research and possess strong
-          skills in writing and qualitative & quantitative data analysis.
-          </p><!-- close blue -->
-        </div><!-- close yellow -->
-      </div><!-- close orange -->
+        <div id="projects"><!-- id work block-->
+          <div class="container"><!--apply a class to work-->
+          <h1>My work</h1>
 
-      <div><!-- orange: work block -->
-        <div id="projects"><!-- yellow-->
-
-          <h1>My work</h1><!-- purple -->
-
-          <div><!-- green: Project 1 -->
-            <div><!-- seafoam: image -->
+          <div class="row"><!-- Project 1 -->
+            <div><!-- image -->
               <a href="beyondcomfort.html">
-                <picture>
-                  <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
-                  <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover">
-                </a>
+              <picture class="centered">
+              <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
+              <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover" class="restrain">
               </picture>
-            </div><!-- close seafoam: image -->
-
-            <div><!-- seafoam: context -->
-              <h3>Beyond Comfort</h3><!-- baby blue -->
-              <p><!-- purple -->
+              </a>
+            </div><!-- close image -->
+            <div><!-- context -->
+              <h3>Beyond Comfort</h3>
+              <p>
                 I was inspired to design this native iOS & Android mobile app based on
                 my own observations of a friend’s business and the hurdles
                 that she and her clients face. I identified the critical app
                 functionalities, designed user flows & wireframes, conducted
                 user testing, built a style & brand, and designed interactive prototypes.
-              </p><!-- close purple -->
-              <a href="beyondcomfort.html" class="button">View project</a><!-- red -->
-            </div><!-- close seafoam: context -->
+              </p>
+              <a href="beyondcomfort.html" class="button">View project</a>
+            </div><!-- close context -->
+          </div><!-- close Project 1 -->
 
-          </div><!-- close green: Project 1 -->
-
-          <div><!-- green: Project 2 -->
-            <div><!-- seafoam: image -->
-                    <a href="davisproperties.html">
-                      <picture><!--didn't include link here since need to understand issue above-->
-                <source srcset="img/davis_properties/davisprop_cover_600px@2x.jpg" media="(max-width:767px)">
-                  <img src="img/davis_properties/davisprop_cover_1200px@2x.jpg" alt="My Image">
+          <div class="row"><!-- Project 2 -->
+            <div><!-- image -->
+              <a href="davisproperties.html">
+              <picture class="centered">
+              <source srcset="img/davis_properties/davisprop_cover_600px@2x.jpg" media="(max-width:767px)">
+              <img src="img/davis_properties/davisprop_cover_1200px@2x.jpg" alt="Davis Properties Cover" class="restrain">
               </picture>
-            </div><!-- close seafoam: image -->
-
-            <div><!-- seafoam: context -->
-              <h3>Davis Properties</h3><!-- baby blue -->
-              <p><!-- purple -->
+              </a>
+            </div><!-- close image -->
+            <div><!-- context -->
+              <h3>Davis Properties</h3>
+              <p>
                 After supporting my partner’s efforts to manage his business,
                 I observed the need for a more streamlined communication approach.
                 To create this messaging app, I developed user stories,
                 mapped a user flow, conducted user testing, designed a style & brand,
                 developed an interactive prototype. I also identified opportunities
                 & positioned the app for future growth.
-              </p><!-- close blue -->
-              <a href="#" class="button">View project</a><!-- red -->
-            </div><!-- close seafoam: context -->
+              </p>
+              <a href="#" class="button">View project</a>
+            </div><!-- close context -->
+          </div><!-- close Project 2 -->
 
-          </div><!-- close green: Project 2 -->
+          </div><!-- close work container -->
+        </div><!-- close work block id-->
+      </div><!--close main block-->
+    </main>
+    <footer>
+      <div class="centered"><!--footer block-->
+        <div id="contact"><!-- id contact block-->
+          <div class="container"><!--container for contact-->
+            <h2>Get in Touch</h2>
+            <p>
+              Do you like my work and want to discuss opportunities?
+              Call: <a href="tel:9175551234">917-555-1234</a>
+            </p>
+            <div class="row"><!-- email-->
+              <a href="mailto:someone@gmail.com" class="button contact">Send email</a><!--red-->
+            </div><!-- close email-->
+          </div><!--close container contact-->
+        </div><!--close contact id-->
 
-        </div><!-- close yellow -->
-    </div><!-- close orange: work block -->
-</main>
-
-<footer>
-    <div><!-- orange: footer block-->
-      <div id="contact"><!-- yellow-->
-
-        <h2>Get in Touch</h2><!--blue-->
-        <p>
-          Do you like my work and want to discuss opportunities?
-          Call: <a href="tel:9175551234">917-555-1234</a>
-        </p><!--purple-->
-
-        <div><!-- violet: email-->
-          <a href="mailto:someone@gmail.com" class="button contact">Send email</a><!--red-->
-        </div><!-- close violet-->
-
-        <div><!-- violet: social-->
-
-          <a href="https://www.linkedin.com/in/nicole-rosenberg-26b31811?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJEU8TS1nQ760%2FjI255D1Pw%3D%3D"
-          target="_blank"> <!-- LinkedIn-->
+        <div id="social"><!-- id social block-->
+          <div class="container"><!--container for social block-->
+            <a href=
+            "https://www.linkedin.com/in/nicole-rosenberg-26b31811?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJEU8TS1nQ760%2FjI255D1Pw%3D%3D"
+            target="_blank"> <!-- LinkedIn-->
             <svg height="42px" fill="#39a78e" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
             version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
             xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -132,10 +128,10 @@
             33.663,45.204l0,106.966l66.45,0Zm-272.403,-296.321c-22.74,0 -37.597,14.95
             -37.597,34.545c0,19.182 14.405,34.544 36.717,34.544l0.429,0c23.175,0
             37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z"/>
-          </svg>
+            </svg>
             </a>
 
-        <a href="https://www.behance.net/nicolerosenberg1" target="_blank"> <!-- Behance-->
+            <a href="https://www.behance.net/nicolerosenberg1" target="_blank"> <!-- Behance-->
             <svg height="42px" version="1.1" viewBox="0 0 60 60" width="60px"
               xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
               xmlns:xlink="http://www.w3.org/1999/xlink"><title/><defs/>
@@ -192,10 +188,10 @@
                   L43.3846295,31.054341 Z" fill="#ffffff"/>
                 </g>
               </g>
-              </svg>
+            </svg>
             </a>
 
-          <a href="https://www.twitter.com/colerose412" target="_blank"> <!-- Twitter -->
+            <a href="https://www.twitter.com/colerose412" target="_blank"> <!-- Twitter -->
             <svg height="42px" fill="#39a78e" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
               version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
               xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0
@@ -210,14 +206,16 @@
               30.523,42.274 57.471,42.784c-21.073,16.476 -47.637,26.31 -76.501,26.31c-4.981,0 -9.834,-0.256
               -14.687,-0.894c26.948,17.624 59.387,27.841 94.125,27.841Z"/>
             </svg>
-          </a>
-        </div><!-- close violet-->
+            </a>
+          </div><!-- close social container-->
+        </div><!-- close social ID-->
 
-        <p>&copy; Copyright Nicole Rosenberg 2021</p>
-
-      </div><!-- close yellow-->
-    </div><!-- close orange: footer block-->
-</footer>
-
-</body>
+        <div id="copyright">
+          <div class="container">
+            <p>&copy; Copyright Nicole Rosenberg 2021</p>
+          </div><!-- close copyright container-->
+        </div><!-- close copyright ID-->
+      </div><!-- close footer-->
+    </footer>
+  </body>
 </html>
