--- a/beyondcomfort.html
+++ b/beyondcomfort.html
@@ -148,7 +148,7 @@
     <p>Below are the high-fidelity screens that I designed.</p>
   </div>
 
-  <div class="container"><!-- screens container -->
+  <div class="container row"><!-- screens container -->
 
     <div><!-- android -->
       <h3>Android</h3>
