--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="hero"><!-- id the intro language -->
           <div class="container"><!--apply a class to the intro-->
             <h1>Hi, my name is Nicole Rosenberg</h1>
-            <h2>  I am a versatile UI/UX designer based in Boston, Massachusetts.</h2>
+            <span>  I am a versatile UI/UX designer based in Boston, Massachusetts.</span>
             <p><!-- description -->
               In addition to completing a 7-month UI Immersion certificate program,
               I have ten years of experience in market research and possess strong
@@ -47,15 +47,15 @@
           <h1>My work</h1>
 
           <div class="row"><!-- Project 1 -->
-            <div><!-- image -->
+            <div class="column col-md-6 col-lg-7"><!-- image -->
               <a href="beyondcomfort.html">
-              <picture class="centered">
+              <picture>
               <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
-              <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover" class="restrain">
+              <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover">
               </picture>
               </a>
             </div><!-- close image -->
-            <div><!-- context -->
+            <div class="column col-md-6 col-lg-5"><!-- context -->
               <h3>Beyond Comfort</h3>
               <p>
                 I was inspired to design this native iOS & Android mobile app based on
@@ -69,15 +69,15 @@
           </div><!-- close Project 1 -->
 
           <div class="row"><!-- Project 2 -->
-            <div><!-- image -->
+            <div class="column col-md-6 col-lg-7"><!-- image -->
               <a href="davisproperties.html">
-              <picture class="centered">
+              <picture>
               <source srcset="img/davis_properties/davisprop_cover_600px@2x.jpg" media="(max-width:767px)">
-              <img src="img/davis_properties/davisprop_cover_1200px@2x.jpg" alt="Davis Properties Cover" class="restrain">
+              <img src="img/davis_properties/davisprop_cover_1200px@2x.jpg" alt="Davis Properties Cover">
               </picture>
               </a>
             </div><!-- close image -->
-            <div><!-- context -->
+            <div class="column col-md-6 col-lg-5"><!-- context -->
               <h3>Davis Properties</h3>
               <p>
                 After supporting my partner’s efforts to manage his business,
@@ -104,7 +104,7 @@
               Do you like my work and want to discuss opportunities?
               Call: <a href="tel:9175551234">917-555-1234</a>
             </p>
-            <div class="row"><!-- email-->
+            <div><!-- email-->
               <a href="mailto:someone@gmail.com" class="button contact">Send email</a><!--red-->
             </div><!-- close email-->
           </div><!--close container contact-->
