--- a/about.html
+++ b/about.html
@@ -40,16 +40,15 @@
           alt="Self Portrait" class="restrain">
         </div><!--close portrait-->
 
-        <div id="story"><!-- id the story block -->
-            <div class="row"><!--split story from skills & tools-->
+        <div class="row"><!--text-->
+          <div id="story"><!-- id the story block -->
+            <div class="container"><!--split story from skills & tools-->
             <h2>My Story</h2>
-            <h4>What I do</h4>
               <p>
                 I pursue roles in which I can leverage and marry my left-brain creativity
                 and right-brain analytical experience & education to create successful user
                 experiences in web and software applications.
               </p>
-            <h4>What I’ve done</h4>
               <p>
                 For over ten years, I designed and led market research projects.
                 This work involved preparing survey, interview, & focus group instruments
@@ -57,7 +56,6 @@
                 those efforts; conducting hundreds of interviews; analyzing results;
                 and succinctly reporting those results to clients.
               </p>
-            <h4>How I excel</h4>
               <p>
                 I’ve been continually praised for my natural ability to connect with my
                 clients and empathize with their unique needs. No matter how small, I
@@ -66,63 +64,51 @@
                 reflective, detailed, prompt, and a natural leader.
                 Along the way, I always promote out-of-the-box thinking.
               </p>
-            <h4>Where it originates</h4>
               <p>
-                My success is bolstered by my varied education:</p>
-                <ul>
-                  <li>In 2021, I received a certificate in UI design from CareerFoundry
-                    (a Berlin-based institute). In addition to artistic design & branding,
-                    this 7-month immersion program included UX design fundamentals such as
-                    interpreting business requirements, building user personas, designing
-                    user flows, and conducting user research & testing. During the program,
-                    I successfully designed the UX & UI of five  apps.</li>
-                  <li>In 2010, I completed a Master of Arts in Sustainable International
-                    Development. It was over this course of study that I learned my love of
-                    data analysis. My focus in econometrics laid the groundwork for discerning
-                    & interpreting themes that live in data.</li>
-                  <li>In 2003, I completed a Bachelor of Arts in Philosophy. My coursework focused
-                    on analytics & logic — that was when I learned began my love affair with logic flows.</li>
-                </ul>
-                <div class="centered">
+                My success is bolstered by my varied education: a certificate in UI design,
+                a Master of Arts in Sustainable International Development, and
+                a Bachelor of Arts in Philosophy.
+            <div class="centered">
               <a href="files/cv.pdf" target="_blank" class="button" download>Download my resume</a>
-              </div>
-          </div><!-- close row-->
+            </div>
+          </div><!-- close column & container-->
         </div><!-- close story id-->
 
         <div id="skill_tool"><!-- id skills & tools block -->
           <div class="container">
-            <div class="row"><!--split skills & tools from story-->
-          <h2>Skills & Tools</h2>
-            <div><!--content -->
-              <div><!--relevant skills -->
-                <h3>Relevant Skills</h3>
-                  <ul>
-                    <li>UI/UX design
-                    <li>Data analysis</li>
-                    <li>Project management</li>
-                    <li>Client relations</li>
-                    <li>Writing & reporting</li>
-                  </ul>
-              </div><!-- close skills -->
-              <div><!--tools-->
-                <h3>Tools I use</h3>
-                  <ul>
-                    <li>Adobe XD</li>
-                    <li>Prott</li>
-                    <li>Balsamiq</li>
-                    <li>Sketch</li>
-                    <li>Figma</li>
-                    <li>PiktoChart</li>
-                    <li>LucidChart</li>
-                    <li>Adobe Illustrator</li>
-                    <li>SquareSpace</li>
-                  </ul>
-              </div><!-- close tools -->
-            </div><!-- close skills and tools content -->
-            </div><!--close row-->
-          </div><!--close container-->
+            <h2>Skills & Tools</h2>
+              <div><!--content -->
+                <div class="container col-md-6"><!--relevant skills -->
+                  <h3>Relevant Skills</h3>
+                    <ul>
+                      <li>UI/UX design
+                      <li>Market research</li>
+                      <li>Data analysis</li>
+                      <li>Project management</li>
+                      <li>Client relations</li>
+                      <li>Writing & reporting</li>
+                    </ul>
+                </div><!-- close skills -->
+                <div class="col-md-6"><!--tools-->
+                  <h3>Tools I use</h3>
+                    <ul>
+                      <li>Adobe XD</li>
+                      <li>Prott</li>
+                      <li>Balsamiq</li>
+                      <li>Sketch</li>
+                      <li>Figma</li>
+                      <li>PiktoChart</li>
+                      <li>LucidChart</li>
+                      <li>Adobe Illustrator</li>
+                      <li>SquareSpace</li>
+                    </ul>
+                </div><!-- close tools -->
+              </div><!-- close skills and tools content -->
+          </div><!--close container & column-->
         </div><!-- skills & tools id -->
-      </div><!-- close main section -->
+        </div><!--close text-->
+
+      </div><!-- close main container -->
     </main>
 
 <footer>
@@ -134,7 +120,7 @@
           Do you like my work and want to discuss opportunities?
           Call: <a href="tel:9175551234">917-555-1234</a>
         </p>
-        <div class="row"><!-- email-->
+        <div><!-- email-->
           <a href="mailto:someone@gmail.com" class="button contact">Send email</a><!--red-->
         </div><!-- close email-->
       </div><!--close container contact-->
