--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
 
         <div class="centered"><!-- portrait-->
           <img src="img/self_portrait_600px.jpg"
-          alt="Self Portrait" class="restrain">
+          alt="Self Portrait">
         </div><!--close portrait-->
 
         <div class="row"><!--text-->
           <div id="story"><!-- id the story block -->
-            <div class="container"><!--split story from skills & tools-->
+            <div class="container col-lg-7"><!--split story from skills & tools-->
             <h2>My Story</h2>
               <p>
                 I pursue roles in which I can leverage and marry my left-brain creativity
@@ -75,7 +75,7 @@
         </div><!-- close story id-->
 
         <div id="skill_tool"><!-- id skills & tools block -->
-          <div class="container">
+          <div class="container col-lg-5">
             <h2>Skills & Tools</h2>
               <div><!--content -->
                 <div class="container col-md-6"><!--relevant skills -->
