--- a/beyondcomfort.html
+++ b/beyondcomfort.html
@@ -183,20 +183,24 @@
   </div><!--close screens container-->
 </div><!--close design-->
 
-<div id="prototypes">
+<div id="prototypes"><!--looks messy on small screens-->
   <div class="container"><!--prototype container-->
     <div class="centered">
       <h2>Prototypes</h2>
       <div class="row">
         <h4>Check out the interactive prototypes.</h4>
-        <div><!-- android -->
-        <a href="https://xd.adobe.com/view/3cad89b8-3c57-48de-bb49-7d95d430508c-69fe/?fullscreen"
-        target="_blank" class="button contact">Android Prototype</a>
-        </div>
-        <div><!-- iOS -->
-        <a href="https://xd.adobe.com/view/224697b4-9ca8-4930-b505-3eeb0df1e843-7715/"
-        target="_blank" class="button contact">iOS Prototype</a>
-        </div>
+          <div class="col-md-6 centered"><!-- android -->
+            <a href="https://xd.adobe.com/view/3cad89b8-3c57-48de-bb49-7d95d430508c-69fe/?fullscreen"
+            target="_blank" class="button contact">Android Prototype</a>
+            <img src="img/beyond_comfort/android_icon.svg"
+            alt="Android Icon" class="icon">
+          </div>
+          <div class="col-md-6 centered"><!-- iOS -->
+            <a href="https://xd.adobe.com/view/224697b4-9ca8-4930-b505-3eeb0df1e843-7715/"
+            target="_blank" class="button contact">iOS Prototype</a>
+            <img src="img/beyond_comfort/ios_icon.svg"
+            alt="iOS Icon" class="icon">
+          </div>
         <p><em>Challenge:</em> see if you can toggle between staff and client!</p>
       </div><!--close row-->
     </div><!--close centering-->
