Tried to fix responsiveness
So that the blocks respond correctly to size change.

--- a/beyondcomfort.html
+++ b/beyondcomfort.html
@@ -29,9 +29,11 @@
           </ul>
         </nav>
       </div><!--close the header container-->
+
     </header>
 
 <main>
+
   <div id="intro"><!-- Intro -->
     <div class="container"><!-- intro container-->
     <h1>Beyond Comfort</h1>
@@ -364,5 +366,6 @@
     </div><!-- close copyright ID-->
   </div><!-- close footer-->
 </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
