--- a/index.html
+++ b/index.html
@@ -296,5 +296,6 @@
         </div><!-- close copyright ID-->
       </div><!-- close footer-->
     </footer>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
