--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700"
     rel="stylesheet">
   </head>
-  <body id="about">
 
+  <body id="about">
     <header>
       <div class="container"><!--contain the header-->
         <a href="index.html">
@@ -28,21 +28,19 @@
         </nav>
       </div><!--close the header container-->
     </header>
-
     <main>
       <div class="container"><!-- main -->
         <div><!-- page heading block-->
           <h1>About</h1>
         </div><!-- close heading block-->
-
         <div class="centered"><!-- portrait-->
           <img src="img/self_portrait_600px.jpg"
-          alt="Self Portrait">
+          alt="Self Portrait" class="super_restrain">
         </div><!--close portrait-->
+        <div><!--substance-->
 
-        <div class="row"><!--text-->
           <div id="story"><!-- id the story block -->
-            <div class="container col-lg-7"><!--split story from skills & tools-->
+            <div class="container col-lg-7"><!--define story responsiveness-->
             <h2>My Story</h2>
               <p>
                 I pursue roles in which I can leverage and marry my left-brain creativity
@@ -68,17 +66,14 @@
                 My success is bolstered by my varied education: a certificate in UI design,
                 a Master of Arts in Sustainable International Development, and
                 a Bachelor of Arts in Philosophy.
-            <div class="centered">
-              <a href="files/cv.pdf" target="_blank" class="button" download>Download my resume</a>
-            </div>
-          </div><!-- close column & container-->
-        </div><!-- close story id-->
+            </div><!-- close story responsiveness-->
+          </div><!-- close story id-->
 
-        <div id="skill_tool"><!-- id skills & tools block -->
-          <div class="container col-lg-5">
-            <h2>Skills & Tools</h2>
-              <div><!--content -->
-                <div class="container col-md-6"><!--relevant skills -->
+          <div id="skill_tool"><!-- id skills & tools block -->
+            <div class="col-lg-5"><!--define s&t responsiveness when large-->
+              <h2>Skills & Tools</h2>
+                <div><!--lists container -->
+                <div class="col-md-6"><!--relevant skills -->
                   <h3>Relevant Skills</h3>
                     <ul>
                       <li>UI/UX design
@@ -103,15 +98,18 @@
                       <li>SquareSpace</li>
                     </ul>
                 </div><!-- close tools -->
-              </div><!-- close skills and tools content -->
-          </div><!--close container & column-->
-        </div><!-- skills & tools id -->
-        </div><!--close text-->
+              </div><!--close lists container-->
+            </div><!-- close s&t responsiveness when large-->
+          </div><!-- skills & tools id -->
+        </div><!--close substance-->
 
+        <div class="centered row">
+              <a href="files/cv.pdf" target="_blank" class="button" download>Download my resume</a>
+        </div>
       </div><!-- close main container -->
     </main>
 
-<footer>
+    <footer>
   <div class="centered"><!--footer block-->
     <div id="contact"><!-- id contact block-->
       <div class="container"><!--container for contact-->
@@ -233,5 +231,6 @@
     </div><!-- close copyright ID-->
   </div><!-- close footer-->
 </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
