Fixed responsiveness issues
Fixed the About page responsiveness. Added a floating button.
Removed formatting issue around the Prototypes section on the Work page.

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
           <img src="img/self_portrait_600px.jpg"
           alt="Self Portrait" class="super_restrain">
         </div><!--close portrait-->
-        <div><!--substance-->
+        <div style="overflow:hidden;"><!--substance-->
 
           <div id="story"><!-- id the story block -->
             <div class="container col-lg-7"><!--define story responsiveness-->
@@ -70,7 +70,7 @@
           </div><!-- close story id-->
 
           <div id="skill_tool"><!-- id skills & tools block -->
-            <div class="col-lg-5"><!--define s&t responsiveness when large-->
+            <div class="one-col col-lg-5"><!--define s&t responsiveness when large-->
               <h2>Skills & Tools</h2>
                 <div><!--lists container -->
                 <div class="col-md-6"><!--relevant skills -->
