--- a/beyondcomfort.html
+++ b/beyondcomfort.html
@@ -33,6 +33,10 @@
     </header>
 
 <main>
+  <a href="#prototypes" class="float">
+   <i class="my-float"></i>
+  Test the Prototypes
+   </a>
 
   <div id="intro"><!-- Intro -->
     <div class="container"><!-- intro container-->
@@ -145,12 +149,12 @@
 </div><!-- close ideation -->
 
 <div id="design"><!-- design -->
-  <div class="container"><!-- design container-->
+<div class="container">
     <h2>Design</h2>
     <p>Below are the high-fidelity screens that I designed.</p>
-  </div>
 
-  <div class="container row"><!-- screens container -->
+
+
 
     <div><!-- android -->
       <h3>Android</h3>
@@ -182,11 +186,11 @@
       </div><!-- close client -->
     </div><!--close ios-->
 
-  </div><!--close screens container-->
+</div><!--close container-->
 </div><!--close design-->
 
 <div id="prototypes"><!--looks messy on small screens-->
-  <div class="container"><!--prototype container-->
+
     <div class="centered">
       <h2>Prototypes</h2>
       <div class="row">
@@ -206,20 +210,20 @@
         <p><em>Challenge:</em> see if you can toggle between staff and client!</p>
       </div><!--close row-->
     </div><!--close centering-->
-  </div><!--close prototype container-->
+
 </div><!--close prototype id-->
 
 
 <div id="conclusion"><!--conclusion-->
-    <div class="container"><!--conclusion container-->
+    <div class="container row"><!--conclusion container-->
       <div><!--conclusion intro-->
-        <h2>Designer Rollercoaster</h2>
+        <h2>Designer's Rollercoaster</h2>
         <p>A seasoned interviewer and facilitator, I considered myself well-practiced at
           data collection. The three testers for whom I facilitated the process were
           confused. Yet, my fourth and fifth testers, left to their own devices,
           provided overwhelmingly positive feedback. What happened?</p>
       </div>
-      <div>
+      <div class="col-lg-7">
         <h3>Patience: the Forgotten Virtue</h3>
         <p>I reflected on the variables that could have contributed to the contrasting
           experiences. I then followed-up with a few of the testers; my facilitation
@@ -232,7 +236,7 @@
           once they understood the purpose of and relationships between screens, they
           felt confident that they could achieve the goals asked of them.</p>
         </div>
-      <div class="row">
+      <div class="col-lg-5">
         <h3>Tempering Expectations</h3>
         <p>Compounding my inelegant facilitation approach, I had asked users to test the
           app from two perspectives (client and staff). It led to a layered type of
