--- a/about.html
+++ b/about.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700"
     rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5b4b299e02.js" crossorigin="anonymous"></script>
   </head>
 
   <body id="about">
     <header>
       <div class="container"><!--contain the header-->
-        <a href="index.html">
+          <div class="navtoggle" id="myNavtoggle">
+          <a href="index.html">
           <img class="logo"
           src="img/logo_temp.svg" alt="Nicole Rosenberg Logo">
         </a>
@@ -23,9 +25,12 @@
           <ul><!-- not bulleted because inside nav tag-->
             <li><a href="beyondcomfort.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()">
+              <i class="fas fa-bars"></i></a></li>
           </ul>
         </nav>
+      </div>
       </div><!--close the header container-->
     </header>
     <main>
@@ -231,6 +236,10 @@
     </div><!-- close copyright ID-->
   </div><!-- close footer-->
 </footer>
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
