--- a/about.html
+++ b/about.html
@@ -35,6 +35,9 @@
     </header>
     <main>
       <div class="container"><!-- main -->
+        <a href="files/cv.pdf" target="_blank" class="float" download>Download resume
+          <i class="my-float"></i>
+        </a>
         <div><!-- page heading block-->
           <h1>About</h1>
         </div><!-- close heading block-->
@@ -87,6 +90,7 @@
                       <li>Project management</li>
                       <li>Client relations</li>
                       <li>Writing & reporting</li>
+                      <li>CSS, HTML, & JavaScript</li>
                     </ul>
                 </div><!-- close skills -->
                 <div class="col-md-6"><!--tools-->
@@ -109,22 +113,21 @@
         </div><!--close substance-->
 
         <div class="centered row">
-              <a href="files/cv.pdf" target="_blank" class="button" download>Download my resume</a>
         </div>
+
+
+  </div>
       </div><!-- close main container -->
     </main>
 
     <footer>
-  <div class="centered"><!--footer block-->
-    <div id="contact"><!-- id contact block-->
+  <div><!--footer block-->
+    <div id="contact" class="centered"><!-- id contact block-->
       <div class="container"><!--container for contact-->
-        <h2>Get in Touch</h2>
-        <p>
-          Do you like my work and want to discuss opportunities?
-          Call: <a href="tel:9175551234">917-555-1234</a>
-        </p>
-        <div><!-- email-->
-          <a href="mailto:someone@gmail.com" class="button contact">Send email</a><!--red-->
+        <h2>Let's Connect!</h2>
+          <a href="tel:9174743065">917-474-3065</a>
+        <div class="row"><!-- email-->
+          <a href="mailto:colerose412@gmail.com" class="button contact">Email me</a>
         </div><!-- close email-->
       </div><!--close container contact-->
     </div><!--close contact id-->
@@ -134,7 +137,7 @@
         <a href=
         "https://www.linkedin.com/in/nicole-rosenberg-26b31811?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJEU8TS1nQ760%2FjI255D1Pw%3D%3D"
         target="_blank"> <!-- LinkedIn-->
-        <svg height="42px" fill="#39a78e" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
+        <svg height="42px" fill="#2e3440" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
         version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
         xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
         <path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256
@@ -159,7 +162,7 @@
           <g id="behance">
             <path d="M30,60 C46.5685433,60 60,46.5685433 60,30 C60,13.4314567 46.5685433,0
               30,0 C13.4314567,0 0,13.4314567 0,30 C0,46.5685433 13.4314567,60 30,60 Z"
-              fill="#39a78e"/>
+              fill="#2e3440"/>
               <path d="M35.423091,19.8620192 L35.423091,22.1697115
               L44.6538602,22.1697115 L44.6538602,19.8620192 L35.423091,19.8620192
               Z M12.1153846,18.6608699 L22.7675034,18.7788462 C22.7675034,18.7788462
@@ -211,7 +214,7 @@
         </a>
 
         <a href="https://www.twitter.com/colerose412" target="_blank"> <!-- Twitter -->
-        <svg height="42px" fill="#39a78e" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
+        <svg height="42px" fill="#2e3440" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
           version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
           xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0
           256,114.71 256,256c0,141.29 -114.71,256 -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256
@@ -230,7 +233,7 @@
     </div><!-- close social ID-->
 
     <div id="copyright">
-      <div class="container">
+      <div class="container centered">
         <p>&copy; Copyright Nicole Rosenberg 2021</p>
       </div><!-- close copyright container-->
     </div><!-- close copyright ID-->
